# OrcaSlicer

./: .gitignore  AGENTS.md  CMakeLists.txt
.github/workflows/: build_orca.yml
deps_src/libnest2d/: CMakeLists.txt
docs/plugin-authoring/: getting-started.md  manifest-reference.md  permission-reference.md  slot-reference.md  verification.md
docs/plugin-authoring/examples/: native-observer.md  webview-listener.md
engine/: CMakeLists.txt
engine/cli/: CMakeLists.txt  main.cpp
engine/include/orca/: Config.hpp  ConfigKeys.hpp  EventTypes.hpp  Events.hpp  Export.hpp  Globals.hpp  PipelineSteps.hpp  PlaceholderProvider.hpp  Presets.hpp  PrinterAgent.hpp  Project.hpp  Result.hpp  Session.hpp  Slicer.hpp  c_api.h  plugin_api.h
engine/include/orca/wit/: orca.wit
engine/plugins/klipper-pro/: Cargo.toml  Makefile  plugin.json  settings.schema.json
engine/plugins/klipper-pro/src/: agent.rs  jobs.rs  lib.rs  moonraker.rs
engine/plugins/klipper-pro/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
engine/plugins/klipper-pro/ui/src/: main.ts  style.css
engine/plugins/sample-profiles/: Makefile  README.md  manifest.json
engine/plugins/sample-profiles/profiles/: OrcaForge Showcase.json
engine/plugins/sample-profiles/profiles/OrcaForge Showcase/filament/: OrcaForge Showcase PLA.json
engine/plugins/sample-profiles/profiles/OrcaForge Showcase/machine/: OrcaForge Showcase 0.4 nozzle.json  OrcaForge Showcase.json
engine/plugins/sample-profiles/profiles/OrcaForge Showcase/process/: 0.20mm Standard @OrcaForge Showcase.json
engine/scripts/: smoke_gui.sh  verify_no_wx.sh
engine/scripts/catalog/: config_keys.raw.tsv  gen_keys_header.py  gui_usage.raw.tsv  gui_usage.varkey.tsv  migration_guide.md  regen_keys.sh  typed_surface_plan.md  wave1.tsv  wave1_plater.tsv
engine/scripts/comby/: transform_a.sh  transform_b_model.sh
engine/src/: Events.cpp  Export.cpp  Globals.cpp  PlaceholderProvider.cpp  PluginManager.cpp  PluginManager.hpp  PluginRegistry.cpp  PluginRegistry.hpp  Presets.cpp  PrinterAgentAdapter.cpp  PrinterAgentAdapter.hpp  Project.cpp  Session.cpp  Slicer.cpp  c_api.cpp
engine/src/runtime/: WasmHost.cpp  WasmHost.hpp  WasmImports.cpp  WasmImports.hpp  WasmPlugin.cpp  WasmPlugin.hpp
engine/tools/rewriters/hello/: CMakeLists.txt  main.cpp
marketplace-ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
marketplace-ui/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
marketplace-ui/src/api/: bridge.ts  queries.ts
marketplace-ui/src/components/: PermissionList.tsx  Toolbar.tsx  VersionTable.tsx
marketplace-ui/src/hooks/: useHashRoute.ts
marketplace-ui/src/pages/: Catalog.tsx  Installed.tsx  PluginDetail.tsx
marketplace-ui/src/styles/: globals.css
sdk/rust/: Cargo.toml
sdk/rust/orca-plugin-macros/: Cargo.toml
sdk/rust/orca-plugin-macros/src/: lib.rs
sdk/rust/orca-plugin-sdk/: Cargo.toml
sdk/rust/orca-plugin-sdk/src/: abi.rs  ctx.rs  device.rs  error.rs  events.rs  gcode.rs  lib.rs  plugin.rs  presets.rs
sdk/rust/orca-plugin-verify/: Cargo.toml  build.rs
sdk/rust/orca-plugin-verify/src/: main.rs  report.rs  unpack.rs
sdk/rust/orca-plugin-verify/src/checks/: abi.rs  layout.rs  manifest.rs  mod.rs  permissions.rs  schema.rs  slots.rs  smoke.rs
sdk/rust/orca-plugin-verify/tests/: integration.rs
sdk/typescript/plugin-types/: package.json  tsconfig.json
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  CMakeLists.txt  Config.hpp  FlushVolCalc.cpp  NSVGUtils.cpp  Print.cpp  Print.hpp  PrintBase.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: 3DBed.cpp  3DScene.cpp  AMSMaterialsSetting.cpp  AmsMappingPopup.cpp  Auxiliary.cpp  BackgroundSlicingProcess.cpp  BitmapCache.cpp  CaliHistoryDialog.cpp  CalibrationWizard.cpp  CalibrationWizardPresetPage.cpp  CalibrationWizardSavePage.cpp  ConfigManipulation.cpp  ConfigWizard.cpp  CreatePresetsDialog.cpp  DeviceManager.cpp  EditGCodeDialog.cpp  ExportPresetBundleDialog.cpp  ExtrusionCalibration.cpp  Field.cpp  FilamentGroupPopup.cpp  FilamentMapDialog.cpp  GCodeViewer.cpp  GLCanvas3D.cpp  GUI_App.cpp  GUI_App.hpp  GUI_AuxiliaryList.cpp  GUI_Factories.cpp  GUI_ObjectList.cpp  GUI_ObjectSettings.cpp  GUI_ObjectTable.cpp  GUI_ObjectTableSettings.cpp  GUI_Preview.cpp  HintNotification.cpp  IMSlider.cpp  MainFrame.cpp  MarketplaceDialog.cpp  MarketplaceDialog.hpp  MultiMachine.cpp  OptionsGroup.cpp  ParamsPanel.cpp  (+36 more)
src/slic3r/Utils/: BBLPrinterAgent.cpp  BBLPrinterAgent.hpp  CalibUtils.cpp  ColorSpaceConvert.cpp  ColorSpaceConvert.hpp  MarketplaceClient.cpp  MarketplaceClient.hpp  MoonrakerPrinterAgent.cpp  MoonrakerPrinterAgent.hpp  NetworkAgentFactory.cpp  OrcaCloudServiceAgent.cpp  (+7 more)
templates/cargo-generate/orca-plugin-rust/: Cargo.toml  cargo-generate.toml  plugin.json
templates/cargo-generate/orca-plugin-rust/.github/workflows/: build.yml
templates/cargo-generate/orca-plugin-rust/src/: lib.rs
templates/create-orca-plugin/: package.json
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt  engine_tests.cpp  test_c_abi_events_bridge.cpp  test_events_bus.cpp  test_klipper_pro_e2e.cpp  test_pipeline_events.cpp  test_plugin_loader.cpp  test_plugin_registry.cpp  test_plugin_reload.cpp  test_profile_pack.cpp  test_runtime_fixtures.cpp  test_session.cpp  test_slot_gcode_filter.cpp  test_slot_pipeline.cpp  test_slot_placeholder_provider.cpp  test_slot_printer_agent.cpp  test_ui_slot_abi.cpp  test_wasm_dispatch.cpp  test_wasm_host.cpp  test_wasm_plugin.cpp
tests/engine-c-abi/: CMakeLists.txt  test_c_api.c
tests/engine/fixtures/klipper_pro/: CMakeLists.txt  moonraker_mock.py
tests/engine/fixtures/loader_plugin/: CMakeLists.txt  manifest.json  plugin.c
tests/engine/fixtures/native_noop/: CMakeLists.txt  manifest.json  plugin.c
tests/engine/fixtures/profile_pack/: CMakeLists.txt
tests/engine/fixtures/profile_pack/orca-test-pack/: manifest.json
tests/engine/fixtures/webview_noop/: CMakeLists.txt  index.html  manifest.json
tests/libnest2d/: CMakeLists.txt
tests/slic3rutils/: CMakeLists.txt  test_plugin_installer.cpp
(+37 files in other folders)
