[package]
name        = "klipper-pro"
version     = "0.1.0"
edition     = "2024"
description = "First-party Klipper/Moonraker reference plugin (Phase 6)."
license     = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
orca-plugin-macros = { version = "0.1.0", path = "../../../sdk/rust/orca-plugin-macros" }
orca-plugin-sdk = { version = "0.1.0", path = "../../../sdk/rust/orca-plugin-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = "3.3.0"
