[package]
name        = "orca-plugin-macros"
version     = "0.1.0"
edition     = "2024"
description = "Derive + attribute macros for orca-plugin-sdk (Phase 5.2)."
license.workspace    = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
