[package]
name        = "orca-plugin-sdk"
version     = "0.1.0"
edition     = "2024"
description = "Safe Rust bindings + plugin authoring traits for OrcaSlicer plugins (Phase 5.1)."
license     = "AGPL-3.0-or-later"
repository  = "https://github.com/SoftFever/OrcaSlicer"

# Plugins ship as cdylib (.so/.dll/.dylib) for the engine's PluginManager
# to dlopen; rlib stays so the SDK can also be consumed transitively by
# other Rust crates (the macros crate in 5.2 re-exports it).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
